@@ -25,6 +25,7 @@ Trunk (unreleased changes)
     
   IMPROVEMENTS
     
+    HAMA-73: Add setNumMap/ReduceTasks() to HamaConfiguration (edwardyoon)
     HAMA-60: Add an arguments for handle parallel degree to MatrixAddition (edwardyoon)
     HAMA-68: Shell parser JUnit test cases (samuel via edwardyoon)
     HAMA-65: Remove the information of an inactive committers (edwardyoon) 
